[gd_scene load_steps=72 format=2]

[ext_resource path="res://Assets/road_animation/road_00009.png" type="Texture" id=1]
[ext_resource path="res://Assets/road_animation/road_00006.png" type="Texture" id=2]
[ext_resource path="res://Assets/road_animation/road_00026.png" type="Texture" id=3]
[ext_resource path="res://Assets/road_animation/road_00012.png" type="Texture" id=4]
[ext_resource path="res://Assets/road_animation/road_00027.png" type="Texture" id=5]
[ext_resource path="res://Assets/road_animation/road_00011.png" type="Texture" id=6]
[ext_resource path="res://Assets/road_animation/road_00032.png" type="Texture" id=7]
[ext_resource path="res://Assets/road_animation/road_00029.png" type="Texture" id=8]
[ext_resource path="res://Assets/road_animation/road_00021.png" type="Texture" id=9]
[ext_resource path="res://Assets/road_animation/road_00033.png" type="Texture" id=10]
[ext_resource path="res://Assets/road_animation/road_00013.png" type="Texture" id=11]
[ext_resource path="res://Assets/road_animation/road_00008.png" type="Texture" id=12]
[ext_resource path="res://Assets/road_animation/road_00010.png" type="Texture" id=13]
[ext_resource path="res://Assets/road_animation/road_00007.png" type="Texture" id=14]
[ext_resource path="res://Assets/road_animation/road_00034.png" type="Texture" id=15]
[ext_resource path="res://Assets/road_animation/road_00044.png" type="Texture" id=16]
[ext_resource path="res://Assets/road_animation/road_00045.png" type="Texture" id=17]
[ext_resource path="res://Assets/road_animation/road_00030.png" type="Texture" id=18]
[ext_resource path="res://Assets/road_animation/road_00035.png" type="Texture" id=19]
[ext_resource path="res://Assets/road_animation/road_00020.png" type="Texture" id=20]
[ext_resource path="res://Assets/road_animation/road_00036.png" type="Texture" id=21]
[ext_resource path="res://Assets/road_animation/road_00017.png" type="Texture" id=22]
[ext_resource path="res://Assets/road_animation/road_00037.png" type="Texture" id=23]
[ext_resource path="res://Assets/road_animation/road_00015.png" type="Texture" id=24]
[ext_resource path="res://Assets/road_animation/road_00016.png" type="Texture" id=25]
[ext_resource path="res://Assets/road_animation/road_00018.png" type="Texture" id=26]
[ext_resource path="res://Assets/road_animation/road_00023.png" type="Texture" id=27]
[ext_resource path="res://Assets/road_animation/road_00019.png" type="Texture" id=28]
[ext_resource path="res://Assets/road_animation/road_00058.png" type="Texture" id=29]
[ext_resource path="res://Assets/road_animation/road_00025.png" type="Texture" id=30]
[ext_resource path="res://Assets/road_animation/road_00040.png" type="Texture" id=31]
[ext_resource path="res://Assets/road_animation/road_00028.png" type="Texture" id=32]
[ext_resource path="res://Assets/road_animation/road_00041.png" type="Texture" id=33]
[ext_resource path="res://Assets/road_animation/road_00043.png" type="Texture" id=34]
[ext_resource path="res://Assets/road_animation/road_00056.png" type="Texture" id=35]
[ext_resource path="res://Assets/road_animation/road_00059.png" type="Texture" id=36]
[ext_resource path="res://Assets/road_animation/road_00031.png" type="Texture" id=37]
[ext_resource path="res://Assets/road_animation/road_00051.png" type="Texture" id=38]
[ext_resource path="res://Assets/road_animation/road_00054.png" type="Texture" id=39]
[ext_resource path="res://Assets/road_animation/road_00042.png" type="Texture" id=40]
[ext_resource path="res://Assets/road_animation/road_00022.png" type="Texture" id=41]
[ext_resource path="res://Assets/road_animation/road_00046.png" type="Texture" id=42]
[ext_resource path="res://Assets/road_animation/road_00038.png" type="Texture" id=43]
[ext_resource path="res://Assets/road_animation/road_00024.png" type="Texture" id=44]
[ext_resource path="res://Assets/road_animation/road_00057.png" type="Texture" id=45]
[ext_resource path="res://Assets/road_animation/road_00039.png" type="Texture" id=46]
[ext_resource path="res://Assets/road_animation/road_00002.png" type="Texture" id=47]
[ext_resource path="res://Assets/road_animation/road_00047.png" type="Texture" id=48]
[ext_resource path="res://Assets/road_animation/road_00048.png" type="Texture" id=49]
[ext_resource path="res://Assets/road_animation/road_00049.png" type="Texture" id=50]
[ext_resource path="res://Assets/road_animation/road_00004.png" type="Texture" id=51]
[ext_resource path="res://Assets/road_animation/road_00052.png" type="Texture" id=52]
[ext_resource path="res://Assets/road_animation/road_00003.png" type="Texture" id=53]
[ext_resource path="res://Assets/road_animation/road_00005.png" type="Texture" id=54]
[ext_resource path="res://Assets/road_animation/road_00053.png" type="Texture" id=55]
[ext_resource path="res://Assets/road_animation/road_00055.png" type="Texture" id=56]
[ext_resource path="res://Assets/road_animation/road_00014.png" type="Texture" id=57]
[ext_resource path="res://Assets/road_animation/road_00060.png" type="Texture" id=58]
[ext_resource path="res://Assets/road_animation/road_00000.png" type="Texture" id=59]
[ext_resource path="res://Assets/road_animation/road_00001.png" type="Texture" id=60]
[ext_resource path="res://Assets/road_animation/road_00050.png" type="Texture" id=61]
[ext_resource path="res://Scenes/Car.tscn" type="PackedScene" id=62]
[ext_resource path="res://Scripts/Space2D.gd" type="Script" id=63]
[ext_resource path="res://Assets/Zombies/Horde_Zombie.png" type="Texture" id=64]
[ext_resource path="res://Scenes/Sacrifice.tscn" type="PackedScene" id=65]
[ext_resource path="res://Assets/Caracters/Character1.png" type="Texture" id=66]
[ext_resource path="res://Assets/Music/Zombi'Escape.wav" type="AudioStream" id=67]
[ext_resource path="res://Assets/Sounds/Game over 1.wav" type="AudioStream" id=68]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 59 ), ExtResource( 60 ), ExtResource( 47 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 2 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 1 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 57 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 41 ), ExtResource( 27 ), ExtResource( 44 ), ExtResource( 30 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 32 ), ExtResource( 8 ), ExtResource( 18 ), ExtResource( 37 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 43 ), ExtResource( 46 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 40 ), ExtResource( 34 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 42 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 61 ), ExtResource( 38 ), ExtResource( 52 ), ExtResource( 55 ), ExtResource( 39 ), ExtResource( 56 ), ExtResource( 35 ), ExtResource( 45 ), ExtResource( 29 ), ExtResource( 36 ), ExtResource( 58 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "GameOver"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Zombies:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 544, 2056 ), Vector2( 544, 1784 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Road:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dangers:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Timer:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Car:hitted")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Car:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GameOver:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( -0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hitted"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Zombies:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 544, 2056 ), Vector2( 544, 1784 ), Vector2( 544, 2056 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Road:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dangers:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Timer:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Car:hitted")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Car:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sacrifice:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Sacrifice:position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1670, -0.25, 0, 0.25, 0, 1670, -0.25, 0, 0.25, 0, 2000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5, 3 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("Scream:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Space2D" type="Node2D"]
script = ExtResource( 63 )

[node name="Road" type="AnimatedSprite" parent="."]
position = Vector2( 536, 960 )
scale = Vector2( 1.88122, 1.88122 )
frames = SubResource( 1 )
frame = 25
playing = true

[node name="Sacrifice" parent="." instance=ExtResource( 65 )]
visible = false
position = Vector2( 610, 2000 )
rotation = 1.5708
texture = ExtResource( 66 )

[node name="Car" parent="." instance=ExtResource( 62 )]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Zombies" type="Sprite" parent="."]
position = Vector2( 544, 2056 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 64 )

[node name="Dangers" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 3 )
anims/Hitted = SubResource( 2 )

[node name="Scream" type="AudioStreamPlayer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 67 )
autoplay = true

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 68 )
[connection signal="area_entered" from="Car" to="." method="_on_Car_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
